# salt-pylint

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .testing.pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
saltpylint/: __about__.py  blacklist.py  checkers.py  dunder_del.py  fileperms.py  minpyver.py  pep263.py  pep8.py  salttesting.py  smartup.py  strings.py  thirdparty.py  version.py  virt.py
saltpylint/ext/: pyqver2.py
saltpylint/py3modernize/: __init__.py
saltpylint/py3modernize/fixes/: fix_dict_salt_six.py  fix_imports_salt_six.py  fix_input_salt_six.py
