[metadata]
name = SaltPyLint
description = Required PyLint plugins needed in the several SaltStack projects.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = https://github.com/saltstack/salt-pylint
project_urls =
    Source=https://github.com/saltstack/salt-pylint
    Tracker=https://github.com/saltstack/salt-pylint/issues
    Documentation=https://salt-pylint.readthedocs.io
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
setup_requires =
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  PyLint
  pycodestyle >= 2.4.0
  modernize == 0.5

[options.packages.find]
exclude =
  tests*

[bdist_wheel]
universal = false

[sdist]
owner = root
group = root
